--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "MIT"
   ],
   "require": {
-    "php": "^7.2",
-    "neos/flow": "~6.2.0",
+    "php": "^7.2 || ^8.0",
+    "neos/flow": "*",
     "neos/cache": "*",
     "neos/utility-files": "*",
     "neos/utility-objecthandling": "*",
